<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lab1ui.gr7.compumovil.udea.edu.co.lab1ui.MainActivity"
    android:orientation="vertical"
    android:id="@+id/principal">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3">
        <RelativeLayout
            android:id="@+id/seccion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="0dp"
            android:orientation="vertical"
            android:background="#00ff00"
            >
            <!--Labels-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtName"
                android:text="@string/txtName"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtApellido"
                android:text="@string/txtApellido"
                android:layout_below="@+id/eTNombres"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtSexo"
                android:text="@string/txtSexo"
                android:layout_below="@+id/eTapellidos"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtTelefono"
                android:text="@string/txtTelefono"
                android:layout_below="@+id/sPaises"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDireccion"
                android:text="@string/txtDireccion"
                android:layout_below="@+id/eTTelefono"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEmail"
                android:text="@string/txtEmail"
                android:layout_below="@+id/eTDireccion"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtHobbies"
                android:text="@string/txtHobbies"
                android:layout_below="@+id/eTEmail"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtPaises"
                android:text="@string/txtPais"
                android:layout_below="@+id/btnSetDate"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDateLabel"
                android:text="@string/txtNacimiento"
                android:layout_below="@+id/rGroup"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDate"
                android:text=""
                android:layout_below="@+id/txtDateLabel"/>



            <!--campos editables-->

            <EditText
                android:id="@+id/eTNombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textFilter|textNoSuggestions"
                android:singleLine="true"
                android:layout_below="@+id/txtName"/>

            <EditText
                android:id="@+id/eTapellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textFilter|textNoSuggestions"
                android:layout_below="@+id/txtApellido"/>
            <EditText
                android:id="@+id/eTTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone|textFilter"
                android:layout_below="@+id/txtTelefono"
                />
            <EditText
                android:id="@+id/eTDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress|textFilter"
                android:layout_below="@+id/txtDireccion"/>
            <EditText
                android:id="@+id/eTEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress|textFilter"

                android:layout_below="@+id/txtEmail"/>

            <RadioGroup
                android:id="@+id/rGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contextClickable="true"
                android:orientation="horizontal"
                android:layout_below="@+id/txtSexo">
                <RadioButton
                    android:id="@+id/rFemenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rF"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    />
                <RadioButton
                    android:id="@+id/rMasculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rM"
                    android:onClick="onRadioButtonClicked"
                    />
            </RadioGroup>
            <Spinner
                android:id="@+id/sHobbies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtHobbies"
                >

            </Spinner>
            <Spinner
                android:id="@+id/sPaises"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPaises">

            </Spinner>

            <CheckBox
                android:id="@+id/cHFavorito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cBFavorito"
                android:layout_below="@+id/sHobbies"/>
            <Button
                android:id="@+id/btnSetDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setDate"
                android:text="@string/btnDate"
                android:layout_alignRight="@+id/txtDate"
                android:layout_below="@id/rGroup"/>


        </RelativeLayout>
    </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/seccion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="0dp"
            android:background="#0000ff"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtMostrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnMostrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnText"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
